# gen/apidoc/skyflow.openapi.json
@@ -45,14 +45,14 @@
     },
     "parameters": [
      {
-      "name": "comment",
+      "name": "description",
       "in": "query",
       "required": false,
-      "description": "comment activity comment",
+      "description": "description activity description",
       "schema": {
        "type": "string",
-       "title": "comment",
-       "description": "comment activity comment"
+       "title": "description",
+       "description": "description activity description"
       }
      },
      {
@@ -112,14 +112,14 @@
     },
     "parameters": [
      {
-      "name": "comment",
+      "name": "description",
       "in": "query",
       "required": false,
-      "description": "comment 命名空间描述",
+      "description": "description 命名空间描述",
       "schema": {
        "type": "string",
-       "title": "comment",
-       "description": "comment 命名空间描述"
+       "title": "description",
+       "description": "description 命名空间描述"
       }
      },
      {
@@ -157,14 +157,14 @@
     },
     "parameters": [
      {
-      "name": "comment",
+      "name": "description",
       "in": "query",
       "required": false,
-      "description": "comment activity comment",
+      "description": "description activity description",
       "schema": {
        "type": "string",
-       "title": "comment",
-       "description": "comment activity comment"
+       "title": "description",
+       "description": "description activity description"
       }
      },
      {
@@ -224,14 +224,14 @@
     },
     "parameters": [
      {
-      "name": "comment",
+      "name": "description",
       "in": "query",
       "required": false,
-      "description": "comment 命名空间描述",
+      "description": "description 命名空间描述",
       "schema": {
        "type": "string",
-       "title": "comment",
-       "description": "comment 命名空间描述"
+       "title": "description",
+       "description": "description 命名空间描述"
       }
      },
      {
@@ -253,11 +253,11 @@
   },
   "/api/v1/CreateOrUpdateStateMachine": {
    "post": {
-    "summary": "CreateOrUpdateStateMachine 创建/更新一个工作流",
+    "summary": "CreateOrUpdateStateMachine 创建/更新一个状态机",
     "operationId": "CreateOrUpdateStateMachine",
     "responses": {
      "200": {
-      "description": "CreateStateMachineResponse 创建一个工作流返回结构",
+      "description": "CreateStateMachineResponse 创建一个状态机返回结构",
       "content": {
        "application/json": {
         "schema": {
@@ -269,21 +269,21 @@
     },
     "parameters": [
      {
-      "name": "comment",
-      "in": "query",
-      "required": false,
-      "schema": {
-       "type": "string",
-       "title": "comment"
-      }
-     },
-     {
       "name": "definition",
       "in": "query",
       "required": false,
       "schema": {
        "type": "string",
        "title": "definition"
+      }
+     },
+     {
+      "name": "description",
+      "in": "query",
+      "required": false,
+      "schema": {
+       "type": "string",
+       "title": "description"
       }
      },
      {
@@ -312,11 +312,11 @@
   },
   "/api/v1/CreateStateMachine": {
    "post": {
-    "summary": "CreateStateMachine 创建一个工作流",
+    "summary": "CreateStateMachine 创建一个状态机",
     "operationId": "CreateStateMachine",
     "responses": {
      "200": {
-      "description": "CreateStateMachineResponse 创建一个工作流返回结构",
+      "description": "CreateStateMachineResponse 创建一个状态机返回结构",
       "content": {
        "application/json": {
         "schema": {
@@ -328,21 +328,21 @@
     },
     "parameters": [
      {
-      "name": "comment",
-      "in": "query",
-      "required": false,
-      "schema": {
-       "type": "string",
-       "title": "comment"
-      }
-     },
-     {
       "name": "definition",
       "in": "query",
       "required": false,
       "schema": {
        "type": "string",
        "title": "definition"
+      }
+     },
+     {
+      "name": "description",
+      "in": "query",
+      "required": false,
+      "schema": {
+       "type": "string",
+       "title": "description"
       }
      },
      {
@@ -405,11 +405,11 @@
   },
   "/api/v1/DeleteStateMachine": {
    "post": {
-    "summary": "DeleteStateMachine 删除一个工作流",
+    "summary": "DeleteStateMachine 删除一个状态机",
     "operationId": "DeleteStateMachine",
     "responses": {
      "200": {
-      "description": "DeleteStateMachineResponse 删除一个工作流返回结构",
+      "description": "DeleteStateMachineResponse 删除一个状态机返回结构",
       "content": {
        "application/json": {
         "schema": {
@@ -471,7 +471,7 @@
   },
   "/api/v1/DescribeStateMachine": {
    "post": {
-    "summary": "DescribeStateMachine 获得一个工作流的描述",
+    "summary": "DescribeStateMachine 获得一个状态机的描述",
     "operationId": "DescribeStateMachine",
     "responses": {
      "200": {
@@ -626,11 +626,11 @@
   },
   "/api/v1/ListStateMachines": {
    "post": {
-    "summary": "ListStateMachines 获得工作流列表",
+    "summary": "ListStateMachines 获得状态机列表",
     "operationId": "ListStateMachines",
     "responses": {
      "200": {
-      "description": "ListStateMachinesResponse 获得工作流列表请求返回",
+      "description": "ListStateMachinesResponse 获得状态机列表请求返回",
       "content": {
        "application/json": {
         "schema": {
@@ -691,11 +691,11 @@
   },
   "/api/v1/UpdateStateMachine": {
    "post": {
-    "summary": "UpdateStateMachine 更新一个工作流",
+    "summary": "UpdateStateMachine 更新一个状态机",
     "operationId": "UpdateStateMachine",
     "responses": {
      "200": {
-      "description": "UpdateStateMachineResponse 更新一个工作流返回结构",
+      "description": "UpdateStateMachineResponse 更新一个状态机返回结构",
       "content": {
        "application/json": {
         "schema": {
@@ -707,21 +707,21 @@
     },
     "parameters": [
      {
-      "name": "comment",
-      "in": "query",
-      "required": false,
-      "schema": {
-       "type": "string",
-       "title": "comment"
-      }
-     },
-     {
       "name": "definition",
       "in": "query",
       "required": false,
       "schema": {
        "type": "string",
        "title": "definition"
+      }
+     },
+     {
+      "name": "description",
+      "in": "query",
+      "required": false,
+      "schema": {
+       "type": "string",
+       "title": "description"
       }
      },
      {
@@ -864,14 +864,14 @@
     },
     "parameters": [
      {
-      "name": "comment",
+      "name": "description",
       "in": "query",
       "required": false,
-      "description": "comment activity comment",
+      "description": "description activity description",
       "schema": {
        "type": "string",
-       "title": "comment",
-       "description": "comment activity comment"
+       "title": "description",
+       "description": "description activity description"
       }
      },
      {
@@ -931,14 +931,14 @@
     },
     "parameters": [
      {
-      "name": "comment",
+      "name": "description",
       "in": "query",
       "required": false,
-      "description": "comment 命名空间描述",
+      "description": "description 命名空间描述",
       "schema": {
        "type": "string",
-       "title": "comment",
-       "description": "comment 命名空间描述"
+       "title": "description",
+       "description": "description 命名空间描述"
       }
      },
      {
@@ -976,14 +976,14 @@
     },
     "parameters": [
      {
-      "name": "comment",
+      "name": "description",
       "in": "query",
       "required": false,
-      "description": "comment activity comment",
+      "description": "description activity description",
       "schema": {
        "type": "string",
-       "title": "comment",
-       "description": "comment activity comment"
+       "title": "description",
+       "description": "description activity description"
       }
      },
      {
@@ -1043,14 +1043,14 @@
     },
     "parameters": [
      {
-      "name": "comment",
+      "name": "description",
       "in": "query",
       "required": false,
-      "description": "comment 命名空间描述",
+      "description": "description 命名空间描述",
       "schema": {
        "type": "string",
-       "title": "comment",
-       "description": "comment 命名空间描述"
+       "title": "description",
+       "description": "description 命名空间描述"
       }
      },
      {
@@ -1072,11 +1072,11 @@
   },
   "/skyflow.SkyflowV1Service/CreateOrUpdateStateMachine": {
    "post": {
-    "summary": "CreateOrUpdateStateMachine 创建/更新一个工作流",
+    "summary": "CreateOrUpdateStateMachine 创建/更新一个状态机",
     "operationId": "CreateOrUpdateStateMachine2",
     "responses": {
      "200": {
-      "description": "CreateStateMachineResponse 创建一个工作流返回结构",
+      "description": "CreateStateMachineResponse 创建一个状态机返回结构",
       "content": {
        "application/json": {
         "schema": {
@@ -1088,21 +1088,21 @@
     },
     "parameters": [
      {
-      "name": "comment",
-      "in": "query",
-      "required": false,
-      "schema": {
-       "type": "string",
-       "title": "comment"
-      }
-     },
-     {
       "name": "definition",
       "in": "query",
       "required": false,
       "schema": {
        "type": "string",
        "title": "definition"
+      }
+     },
+     {
+      "name": "description",
+      "in": "query",
+      "required": false,
+      "schema": {
+       "type": "string",
+       "title": "description"
       }
      },
      {
@@ -1131,11 +1131,11 @@
   },
   "/skyflow.SkyflowV1Service/CreateStateMachine": {
    "post": {
-    "summary": "CreateStateMachine 创建一个工作流",
+    "summary": "CreateStateMachine 创建一个状态机",
     "operationId": "CreateStateMachine2",
     "responses": {
      "200": {
-      "description": "CreateStateMachineResponse 创建一个工作流返回结构",
+      "description": "CreateStateMachineResponse 创建一个状态机返回结构",
       "content": {
        "application/json": {
         "schema": {
@@ -1147,21 +1147,21 @@
     },
     "parameters": [
      {
-      "name": "comment",
-      "in": "query",
-      "required": false,
-      "schema": {
-       "type": "string",
-       "title": "comment"
-      }
-     },
-     {
       "name": "definition",
       "in": "query",
       "required": false,
       "schema": {
        "type": "string",
        "title": "definition"
+      }
+     },
+     {
+      "name": "description",
+      "in": "query",
+      "required": false,
+      "schema": {
+       "type": "string",
+       "title": "description"
       }
      },
      {
@@ -1224,11 +1224,11 @@
   },
   "/skyflow.SkyflowV1Service/DeleteStateMachine": {
    "post": {
-    "summary": "DeleteStateMachine 删除一个工作流",
+    "summary": "DeleteStateMachine 删除一个状态机",
     "operationId": "DeleteStateMachine2",
     "responses": {
      "200": {
-      "description": "DeleteStateMachineResponse 删除一个工作流返回结构",
+      "description": "DeleteStateMachineResponse 删除一个状态机返回结构",
       "content": {
        "application/json": {
         "schema": {
@@ -1290,7 +1290,7 @@
   },
   "/skyflow.SkyflowV1Service/DescribeStateMachine": {
    "post": {
-    "summary": "DescribeStateMachine 获得一个工作流的描述",
+    "summary": "DescribeStateMachine 获得一个状态机的描述",
     "operationId": "DescribeStateMachine2",
     "responses": {
      "200": {
@@ -1445,11 +1445,11 @@
   },
   "/skyflow.SkyflowV1Service/ListStateMachines": {
    "post": {
-    "summary": "ListStateMachines 获得工作流列表",
+    "summary": "ListStateMachines 获得状态机列表",
     "operationId": "ListStateMachines2",
     "responses": {
      "200": {
-      "description": "ListStateMachinesResponse 获得工作流列表请求返回",
+      "description": "ListStateMachinesResponse 获得状态机列表请求返回",
       "content": {
        "application/json": {
         "schema": {
@@ -1510,11 +1510,11 @@
   },
   "/skyflow.SkyflowV1Service/UpdateStateMachine": {
    "post": {
-    "summary": "UpdateStateMachine 更新一个工作流",
+    "summary": "UpdateStateMachine 更新一个状态机",
     "operationId": "UpdateStateMachine2",
     "responses": {
      "200": {
-      "description": "UpdateStateMachineResponse 更新一个工作流返回结构",
+      "description": "UpdateStateMachineResponse 更新一个状态机返回结构",
       "content": {
        "application/json": {
         "schema": {
@@ -1526,21 +1526,21 @@
     },
     "parameters": [
      {
-      "name": "comment",
-      "in": "query",
-      "required": false,
-      "schema": {
-       "type": "string",
-       "title": "comment"
-      }
-     },
-     {
       "name": "definition",
       "in": "query",
       "required": false,
       "schema": {
        "type": "string",
        "title": "definition"
+      }
+     },
+     {
+      "name": "description",
+      "in": "query",
+      "required": false,
+      "schema": {
+       "type": "string",
+       "title": "description"
       }
      },
      {
@@ -1578,16 +1578,16 @@
       "type": "string",
       "description": "activity_uri 活动uri"
      },
-     "comment": {
-      "title": "comment",
-      "type": "string",
-      "description": "comment 活动描述"
-     },
      "create_time": {
       "title": "create_time",
       "type": "string",
       "format": "int64",
       "description": "create_time timestample"
+     },
+     "description": {
+      "title": "description",
+      "type": "string",
+      "description": "description 活动描述"
      },
      "name": {
       "title": "name",
@@ -1661,7 +1661,7 @@
      }
     },
     "title": "skyflow.CreateStateMachineResponse",
-    "description": "CreateStateMachineResponse 创建一个工作流返回结构"
+    "description": "CreateStateMachineResponse 创建一个状态机返回结构"
    },
    "skyflow.DeleteActivityResponse": {
     "type": "object",
@@ -1671,7 +1671,7 @@
    "skyflow.DeleteStateMachineResponse": {
     "type": "object",
     "title": "skyflow.DeleteStateMachineResponse",
-    "description": "DeleteStateMachineResponse 删除一个工作流返回结构"
+    "description": "DeleteStateMachineResponse 删除一个状态机返回结构"
    },
    "skyflow.DescribeActivityResponse": {
     "type": "object",
@@ -1681,16 +1681,16 @@
       "type": "string",
       "description": "activity_uri activity uri"
      },
-     "comment": {
-      "title": "comment",
-      "type": "string",
-      "description": "comment activity comment"
-     },
      "create_time": {
       "title": "create_time",
       "type": "string",
       "format": "int64",
       "description": "create_time create time timestample"
+     },
+     "description": {
+      "title": "description",
+      "type": "string",
+      "description": "description activity description"
      },
      "name": {
       "title": "name",
@@ -1794,21 +1794,21 @@
      }
     },
     "title": "skyflow.ListStateMachinesResponse",
-    "description": "ListStateMachinesResponse 获得工作流列表请求返回"
+    "description": "ListStateMachinesResponse 获得状态机列表请求返回"
    },
    "skyflow.NamespaceListItem": {
     "type": "object",
     "properties": {
-     "comment": {
-      "title": "comment",
-      "type": "string",
-      "description": "comment 命名空间描述"
-     },
      "create_time": {
       "title": "create_time",
       "type": "string",
       "format": "int64",
       "description": "create_time timestample"
+     },
+     "description": {
+      "title": "description",
+      "type": "string",
+      "description": "description 命名空间描述"
      },
      "name": {
       "title": "name",
@@ -1877,62 +1877,66 @@
    "skyflow.StateMachineInfo": {
     "type": "object",
     "properties": {
-     "comment": {
-      "title": "comment",
-      "type": "string"
-     },
-     "create_time": {
-      "title": "create_time",
-      "type": "string"
-     },
-     "modify_time": {
-      "title": "modify_time",
-      "type": "string"
-     },
-     "name": {
-      "title": "name",
-      "type": "string"
-     },
-     "statemachine_definition": {
-      "title": "statemachine_definition",
-      "type": "string"
-     },
-     "statemachine_type": {
-      "title": "statemachine_type",
-      "type": "string",
-      "description": "stateMachine_type; pipeline/statemachine"
-     },
-     "statemachine_uri": {
-      "title": "statemachine_uri",
-      "type": "string"
-     }
-    },
-    "title": "skyflow.StateMachineInfo",
-    "description": "StateMachineInfo 工作流信息"
-   },
-   "skyflow.StateMachineListItem": {
-    "type": "object",
-    "properties": {
-     "comment": {
-      "title": "comment",
-      "type": "string",
-      "description": "comment 工作流描述"
-     },
      "create_time": {
       "title": "create_time",
       "type": "string",
       "format": "int64",
       "description": "create_time timestample"
      },
+     "definition": {
+      "title": "definition",
+      "type": "string"
+     },
+     "description": {
+      "title": "description",
+      "type": "string"
+     },
+     "name": {
+      "title": "name",
+      "type": "string"
+     },
+     "statemachine_uri": {
+      "title": "statemachine_uri",
+      "type": "string"
+     },
+     "type": {
+      "title": "type",
+      "type": "string",
+      "description": "type : standard / express"
+     },
+     "update_time": {
+      "title": "update_time",
+      "type": "string",
+      "format": "int64",
+      "description": "update_time timestample"
+     }
+    },
+    "title": "skyflow.StateMachineInfo",
+    "description": "StateMachineInfo 状态机信息"
+   },
+   "skyflow.StateMachineListItem": {
+    "type": "object",
+    "properties": {
+     "create_time": {
+      "title": "create_time",
+      "type": "string",
+      "format": "int64",
+      "description": "create_time timestample"
+     },
+     "description": {
+      "title": "description",
+      "type": "string",
+      "description": "description 状态机描述"
+     },
      "name": {
       "title": "name",
       "type": "string",
-      "description": "name 工作流名字"
+      "description": "name 状态机名字"
      },
      "statemachine_uri": {
       "title": "statemachine_uri",
       "type": "string",
-      "description": "statemachine_uri 工作流uri"
+      "description": "statemachine_uri 状态机uri"
      },
      "update_time": {
       "title": "update_time",
@@ -1947,7 +1951,7 @@
    "skyflow.UpdateStateMachineResponse": {
     "type": "object",
     "title": "skyflow.UpdateStateMachineResponse",
-    "description": "UpdateStateMachineResponse 更新一个工作流返回结构"
+    "description": "UpdateStateMachineResponse 更新一个状态机返回结构"
    }
   }
  }
